Scale of a strip in NLA is changed after moving it long distance (frames) #33852

Closed
opened 2013-01-12 20:47:33 +01:00 by Nico Taco · 5 comments

%%%--- Operating System, Graphics card ---
Windows8Pro64bit + GeForce GTX 660

- Blender version with error, and version that worked ---

occurs on 2.65a

- Short description of error ---

If a strip on NLA moved long distance (especially longer than 10,000 frames) , its scale is changed.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. create a NLA strip. (attached file)
  2. press G-key then input 10000 then press Enter.
  3. now you can see longed strip.
    (though if mouse is moved after input the number and before press Enter, the bug is gone.)%%%
%%%--- Operating System, Graphics card --- Windows8Pro64bit + GeForce GTX 660 - Blender version with error, and version that worked --- occurs on 2.65a - Short description of error --- If a strip on NLA moved long distance (especially longer than 10,000 frames) , its scale is changed. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. create a NLA strip. (attached file) 2. press G-key then input 10000 then press Enter. 3. now you can see longed strip. (though if mouse is moved after input the number and before press Enter, the bug is gone.)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Assigning to self.

Chances are the problem occurs because the new start position gets set before the new end does: thus, the start value is clamped to the old end value, while the end value can be set properly. Accordingly, the scale value is increased to fit the new strip extents.

This problem usually won't occur when using mouse transforms as it's generally not that easy to move strips fast enough to cause problems.%%%

%%%Assigning to self. Chances are the problem occurs because the new start position gets set before the new end does: thus, the start value is clamped to the old end value, while the end value can be set properly. Accordingly, the scale value is increased to fit the new strip extents. This problem usually won't occur when using mouse transforms as it's generally not that easy to move strips fast enough to cause problems.%%%
Member

%%%Fixed in svn (53943)%%%

%%%Fixed in svn (53943)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%I tried 53958 and the issue seems completely fixed. Thank you!%%%

%%%I tried 53958 and the issue seems completely fixed. Thank you!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33852
No description provided.